Closed Bug 648988 Opened 14 years ago Closed 14 years ago

crash [@ nsIContent::Tag()]

Categories

(Core :: Disability Access APIs, defect)

x86
Windows NT
defect
Not set
critical

Tracking

()

VERIFIED FIXED
mozilla6

People

(Reporter: MarcoZ, Assigned: tbsaunde)

References

Details

(Keywords: crash, topcrash, Whiteboard: [aurora-backout])

Crash Data

Attachments

(1 file, 2 obsolete files)

This bug was filed from the Socorro interface and is 
report bp-733858f4-ab1e-42c9-bbe0-03a962110411 .
============================================================= 

The call is made from nsHypertExtAccessible::nativeState
Component: Disability Access → Disability Access APIs
Product: Firefox → Core
QA Contact: disability.access → accessibility-apis
Trevor, you're call I think, looks as regression from your state patch.
Blocks: 634218
Trevor, can you drop your try build link here when it is ready?
Assignee: nobody → trev.saunders
http://ftp.mozilla.org/pub/mozilla.org/firefox/tryserver-builds/trev.saunders@gmail.com-48e8c874a008/tryserver-win32/firefox-4.2a1pre.en-US.win32.zip

This build adds the IsDefunct check discussed on IRC.  Would  someone with a windows machine mind testing?  Sorry about the delay tryserver took forever :(
bug 648989 has same problem (might need different patch though but it's unlikely).
Attachment #525271 - Flags: review?(surkov.alexander)
Comment on attachment 525271 [details] [diff] [review]
bug 648988 crash @ nsIContent::Tag()


> PRUint64
> nsAccessible::State()
> {
>+  if (IsDefunct())
>+    return states::DEFUNCT;
>+
>   PRUint64 state = NativeState();
>   if (state & states::DEFUNCT)
>     return state;

no need to check it

> PRUint64
> nsApplicationAccessible::NativeState()
> {
>-  return IsDefunct() ? states::DEFUNCT : 0;
>+  return 0;

then you should fix nsApplicationAccessible::State()
Attachment #525271 - Flags: review?(surkov.alexander) → review+
Attached patch patch to land (obsolete) — Splinter Review
Attached patch patch to landSplinter Review
correctly fix nsApplicationAccessible::State()
Attachment #525271 - Attachment is obsolete: true
Attachment #525279 - Attachment is obsolete: true
I can still reproduce the crashes with the try-server build. It also doesn't fix bug 648989.
Forget that last comment, after talking to Trevor on IRC, it iis apparrent the try-server build I was testing was bad, and the patch on this bug is actually good to go.
http://hg.mozilla.org/mozilla-central/rev/15dc9bbc94d6
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla2.2
The try-server build here:
http://ftp.mozilla.org/pub/mozilla.org/firefox/tryserver-builds/surkov.alexander@gmail.com-4546f104f670/tryserver-win32/
fixes this bug. So the patch that landed seems to be good. Will confirm with nightly build as soon as it's ready.
Verified fixed in Mozilla/5.0 (Windows NT 6.1; WOW64; rv:5.0a2) Gecko/20110412 Firefox/5.0a2
Status: RESOLVED → VERIFIED
Backed out of Aurora in the wake of the bug 634218 backout:
http://hg.mozilla.org/mozilla-aurora/rev/bcc0d10b5d4b
Whiteboard: [aurora-backout]
Target Milestone: mozilla5 → mozilla6
Sorry for the spam, the correct link of the backout changeset on Aurora is:
http://hg.mozilla.org/mozilla-aurora/rev/25feb8bd6294
Crash Signature: [@ nsIContent::Tag()]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: