Add additional IsDefunct() checks in State() methods to fix crashes [@ nsIContent::Tag()].  Bug 648988.  r=surkov