accessible/src/xul/nsXULFormControlAccessible.cpp
@@ -330,10 +330,6 @@ nsXULDropmarkerAccessible::NativeRole()
 PRUint64
 nsXULDropmarkerAccessible::NativeState()
 {
-
-  if (IsDefunct())
-    return states::DEFUNCT;
-
   return DropmarkerOpen(PR_FALSE) ? states::PRESSED : 0;
 }
 
@@ -815,7 +811,7 @@ nsXULToolbarSeparatorAccessible::NativeRole()
 PRUint64
 nsXULToolbarSeparatorAccessible::NativeState()
 {
-  return IsDefunct() ? states::DEFUNCT : 0;
+  return 0;
 }
 
 ////////////////////////////////////////////////////////////////////////////////
