accessible/src/xul/nsXULTreeGridAccessible.cpp
@@ -1165,10 +1165,6 @@ nsXULTreeGridCellAccessible::NativeRole()
 PRUint64
 nsXULTreeGridCellAccessible::NativeState()
 {
-
-  if (IsDefunct())
-    return states::DEFUNCT;
-
   // selectable/selected state
   PRUint64 states = states::SELECTABLE;
 
